--- a/azure/pull-request.pipeline.yml
+++ b/azure/pull-request.pipeline.yml
@@ -32,3 +32,15 @@ steps:
 - script: |
     CI=true yarn test-cypress-with-test-api
   displayName: 'Yarn run cypress (e2e) tests'
+
+- task: PublishTestResults@2
+  condition: succeededOrFailed()
+  inputs:
+    testRunner: JUnit
+    testResultsFiles: '$(Build.SourcesDirectory)/cypress/videos/*.mp4'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.SourcesDirectory)/build'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
