Clear yarn cache

--- a/azure/master-to-test.pipeline.yml
+++ b/azure/master-to-test.pipeline.yml
@@ -17,10 +17,9 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '12.x'
-  displayName: 'Install Node.js'
+- script: |
+    yarn cache clean
+  displayName: 'yarn cache clean'
 
 - script: |
     yarn install
