--- a/azure/pull-request.pipeline.yml
+++ b/azure/pull-request.pipeline.yml
@@ -12,10 +12,9 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '12.x'
-  displayName: 'Install Node.js'
+- script: |
+    yarn cache clean
+  displayName: 'yarn cache clean'
 
 - script: |
     yarn install
